--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: #f2f2f2 ;
+   
 }
 
 .body__container {
@@ -23,9 +23,8 @@
     justify-content: center;
 }
 
-
-.body-bg {
-    background-color: #1b1c1e; /*  #f2f2f2;  */
+.header__nav{
+    background-color: #1b1c1e !important
 }
 
 
@@ -35,14 +34,13 @@
 
     position: sticky !important; 
     top: 0px;
-    background-color: #1b1c1e;
     color: #f2f2f2;
     opacity: 10;
     z-index: 2;
 }
 
 .nav--bg{
-    background-color: #1b1c1e;
+    background-color: #0a56ef;
     
 }
 .nav-link{
